<resources>
  <string name="app_name">Weather</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="action_refresh" translable="false">Refresh</string>
  <string name="title_activity_detail">DetailActivity</string>
  <string name="title_activity_settings">SettingsActivity</string>

  <string name="pref_units_metric">metric</string>
  <string name="pref_units_imperial">imperial</string>
  <string name="pref_location_label">location</string>
  <string name="pref_location_key">pref_location</string>
  <string name="pref_location_default">94043</string>
  <string name="pref_units_label">units</string>
  <string name="pref_units_key">pref_units</string>
  <string name="pref_units_default">@string/pref_units_metric</string>
</resources>
