<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<CheckBoxPreference-->
        <!--android:key="example_checkbox"-->
        <!--android:title="@string/pref_title_social_recommendations"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:defaultValue="true" />-->

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_entryValues" />

</PreferenceScreen>
